--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/platform-browser": "8.2.14",
     "@angular/platform-browser-dynamic": "8.2.14",
     "@angular/router": "8.2.14",
+    "caniuse-lite": "^1.0.30001015",
     "core-js": "^2.6.11",
     "express": "^4.16.2",
     "hammerjs": "^2.0.8",
