--- a/angular.json
+++ b/angular.json
@@ -122,7 +122,7 @@
   "defaultProject": "angular-material-course",
   "schematics": {
     "@schematics/angular:component": {
-      "styleext": "scss"
+      "styleext": "css"
     },
     "@schematics/angular:directive": {
       "prefix": ""
